fix : overflow hidden

--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,7 @@ html {
   min-height: 1765px;
   width: 1440px;
   /* max-width: 1440px; */
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 
